--- a/verify_email/templates/verify_email/email_verification_msg.html
+++ b/verify_email/templates/verify_email/email_verification_msg.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     
-    <title>Verify Email address</title>
+    <title>Verify your Email address</title>
 
     <style>
         .format-font {
@@ -52,16 +52,16 @@
             </h1>
         </div>
 
-        <h2 class="format-font" style="text-align: center;">E-mail Confirmation</h2> <hr style="background-color:  rgb(110, 3, 211); width:100px">
+        <h2 class="format-font" style="text-align: center;">Email Confirmation</h2> <hr style="background-color:  rgb(110, 3, 211); width:100px">
 
         <div class="format-font" style="margin-top: 20px; line-height: 1.5;">
             <p style="text-align: center; font-weight: bold;">Greetings!</p>
-            You received this mail because you attempted to make account on our website, 
-            Please click on the link below to confirm the email and activate your account.       
+            You received this Email because you attempted to make account on our website.
+            Please click on the link below to confirm the Email address and activate your account.       
         </div>
 
         <p class="format-font" style="text-align: center; margin-top: 50px;">
-            Please verify your e-mail :
+            Please verify your Email :
             <hr style="background-color:  rgb(110, 3, 211); width:50px">
             <div class="format-font" style="text-align: center; margin-top: 30px;" >
                 <a href="{{link}}" class="my-button" >Verify</a>
@@ -70,11 +70,11 @@
         </p>
     
         <p class="format-font" style="margin-top: 50px;">
-           <b> You'll be joining us right after the verification !</b>
+           <b> You'll be joining us right after the verification!</b>
         </p>
     
         <p class="format-font" style="line-height: 1.5;">
-            <b>Thanks for joining! <br> This mail machine generated. <br>Do not reply to this mail </b>
+            <b>Thanks for joining! <br> This Email is machine generated. <br>Do not reply to this Email.</b>
         </p>
         
     </div>
